...
                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUK-Zp-wYI">
                                                                            <rect key="frame" x="10" y="10" width="206" height="20.5"/>
                                                                            <accessibility key="accessibilityConfiguration" identifier="nameLabel"/>
                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                            <nil key="textColor"/>
...
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tEi-eL-4pS">
                                                                    <rect key="frame" x="0.0" y="0.0" width="129.5" height="117"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="albumButton"/>
                                                                    <state key="normal" image="image-multiple"/>
                                                                </button>
...
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ubO-r7-yza">
                                                                    <rect key="frame" x="0.0" y="0.0" width="48" height="30"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="commentNumberButton"/>
                                                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <state key="normal" image="message-reply"/>
...
                                        <rect key="frame" x="5" y="5" width="311" height="40"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="postCommentTextView"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5Y-Nq-99G">
                                        <rect key="frame" x="326" y="3" width="46" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="postCommentButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="46" id="DCx-jY-aZD"/>
...
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="photoView"/>
                        <constraints>
                            <constraint firstItem="wJs-48-XZK" firstAttribute="bottom" secondItem="EDU-tK-x6M" secondAttribute="bottom" id="444-0U-S5L"/>
...
